Code smell reduction.